[package]
name = "media-converter-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-ws = "0.2"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = "0.3"
regex = "1.10"
